--- a/angular.json
+++ b/angular.json
@@ -80,10 +80,11 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
+            "codeCoverage": true,
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
+            "karmaConfig": "karma.conf.js", 
             "assets": [
               "src/favicon.ico",
               "src/assets"
