--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --open",
     "build": "ng build && npm run lint",
     "test": "ng test --code-coverage",
     "test-headless": "ng test --watch=false --browsers=ChromeHeadless",
